<resources>
    <string name="app_name">LunchHour</string>
    <string name="image_of_truck">Image of truck</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="menu">Menu</string>
    <string name="menu2">MENU</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="sign_me_up">Sign Me Up!</string>
    <string name="vendor">Vendor?</string>
    <string name="cancel_sign_up">Cancel Sign Up</string>
    <!-- Todo: Change these to match your account -->
    <string name="be_app_id">36151066-3E8D-102D-FF67-97F58C5B0200</string>
    <string name="be_android_api_key">706E8772-E3CF-F66B-FF89-8793008A5C00</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a valid email address, password, and name.</string>
    <string name="empty_field_login_error">Be sure you have entered a valid email addres and password.</string>
    <string name="password_length_error">Your password must be at least 6 characters long.</string>
    <string name="password_email_same_error">Your email and password cannot be the same.</string>
    <string name="invalid_email_format_error">The entered email was in the incorrect format.</string>
    <string name="creating_new_account_message">"Creating a new account..."</string>
    <string name="logging_in_message">"Logging in..."</string>
    <string name="progress_title">Please Wait!</string>
</resources>
